po: update po/nl_NL/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 03:38+0000\n"
+"PO-Revision-Date: 2016-05-19 09:52+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -262,7 +262,7 @@ msgstr "bekijk meer informatie over dit onderwerp"
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page ID"
-msgstr "Bijdrage pagina ID"
+msgstr "Bijdragepagina-ID"
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Payment Instrument ID"
@@ -283,11 +283,11 @@ msgstr "Label bedrag"
 #: CRM/Contribute/DAO/Contribution.php
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution ID"
-msgstr "Periodieke Bijdrage ID"
+msgstr "Nummer periodieke bijdrage"
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Contribution Status ID"
-msgstr "Bijdrage status ID"
+msgstr "Bijdragestatus-ID"
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Contribution Address"
@@ -337,7 +337,7 @@ msgstr "Later betalen "
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Pay Later Receipt"
-msgstr "Later betalen ontvangst"
+msgstr "Ontvangstbevestiging later betalen"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Allow Partial Payment"
@@ -382,7 +382,7 @@ msgstr "BCC"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Receipt Text"
-msgstr "Tekst Ontvangstbewijs"
+msgstr "Tekst ontvangstbewijs"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Page Active?"
@@ -567,11 +567,11 @@ msgstr "Kosten"
 
 #: CRM/Contribute/DAO/Product.php CRM/Contribute/Form/ManagePremiums.php
 msgid "Period Type"
-msgstr ""
+msgstr "Periodetype"
 
 #: CRM/Contribute/DAO/Product.php CRM/Contribute/Form/ManagePremiums.php
 msgid "Duration Unit"
-msgstr ""
+msgstr "Tijdseenheid periode"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Url Logo"
@@ -754,7 +754,7 @@ msgstr "Voor een terugbetaling mag geen creditcard gebruikt worden."
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "Direct Debit Information"
-msgstr ""
+msgstr "Incasso-informatie"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Refund Amount"
@@ -822,11 +822,11 @@ msgstr "Verstuur een verzoek tot beëindiging naar %1 ?"
 #: CRM/Contribute/Form/CancelSubscription.php
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid "Notify Contributor?"
-msgstr "Gever Inlichten?"
+msgstr "Gever inlichten?"
 
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid "Cancel Automatic Membership Renewal"
-msgstr "Beëindig Automatische Verlenging Lidmaatschap"
+msgstr "Automatische verlenging lidmaatschap beëindigen"
 
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid "Not Now"
@@ -1056,7 +1056,7 @@ msgstr "Betaling van toezegging via creditcard"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Credit Card Contribution"
-msgstr "Creditcard bijdrage"
+msgstr "Creditcard-bijdrage"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Additional Details"
@@ -1206,7 +1206,7 @@ msgstr "Aanbieden termijnen"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Pay later option"
-msgstr "Later betalen optie"
+msgstr "Later betalen mogelijk"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Pay later label"
@@ -1508,7 +1508,7 @@ msgstr "Bedankje en ontvangstbewijs"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "URL to Logo Image"
-msgstr "URL van logo-afbeelding"
+msgstr "URL naar logo-afbeelding"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Contribute!"
@@ -1572,7 +1572,7 @@ msgstr "Voorvertoning pagina - %1"
 
 #: CRM/Contribute/Form/ContributionPage.php
 msgid "Delete Page - %1"
-msgstr "Verwijder Pagina - %1"
+msgstr "Verwijder pagina - %1"
 
 #: CRM/Contribute/Form/ContributionPage.php
 msgid "I am contributing on behalf of an organization."
@@ -1818,7 +1818,7 @@ msgstr "E-mail ontvangstbewijzen"
 
 #: CRM/Contribute/Form/Task/PDF.php
 msgid "PDF Receipts"
-msgstr "PDF ontvangstbewijzen"
+msgstr "PDF-ontvangstbevestigingen"
 
 #: CRM/Contribute/Form/Task/PDF.php CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Update receipt dates for these contributions"
@@ -1896,7 +1896,7 @@ msgstr "Opties afdrukken en e-mail"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Make Thank-you Letters"
-msgstr "Aanmaken bedankbrief"
+msgstr "Bedankbrieven maken"
 
 #: CRM/Contribute/Form/Task/PDFLetterCommon.php
 msgid ""
@@ -2025,7 +2025,7 @@ msgstr "U mag de toelichting niet wijzigen."
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid "Recurring Contribution Amount"
-msgstr "Bedrag Periodieke Bijdrage"
+msgstr "Bedrag periodieke bijdrage"
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid "Could not update the Recurring contribution details"
@@ -2095,7 +2095,7 @@ msgstr "Bijdrage-URL weergeven"
 
 #: CRM/Contribute/Info.php
 msgid "CiviCRM Contribution Engine"
-msgstr "CiviCRM bijdragesysteem"
+msgstr "CiviCRM-bijdragesysteem"
 
 #: CRM/Contribute/Info.php
 msgid "access CiviContribute"
@@ -2145,15 +2145,15 @@ msgstr "Maak een kopie"
 
 #: CRM/Contribute/Page/ContributionPage.php
 msgid "Make a Copy of CiviCRM Contribution Page"
-msgstr "Kopie van CiviCRM bijdragepagina maken"
+msgstr "CiviCRM-bijdragepagina kopiëren"
 
 #: CRM/Contribute/Page/ContributionPage.php
 msgid "Membership Settings"
-msgstr "Lidmaatschap Instellingen"
+msgstr "Lidmaatschapsinstellingen"
 
 #: CRM/Contribute/Page/ContributionPage.php
 msgid "Contribution Widget"
-msgstr "Bijdrage Widget"
+msgstr "Bijdrage-widget"
 
 #: CRM/Contribute/Page/ContributionPage.php
 msgid "Live Page"
@@ -2162,11 +2162,11 @@ msgstr "Productiepagina"
 #: CRM/Contribute/Page/ContributionPage.php
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 msgid "Current Month-To-Date"
-msgstr "Deze maand, tot nu toe"
+msgstr "Deze maand tot nu toe"
 
 #: CRM/Contribute/Page/ContributionPage.php
 msgid "Fiscal Year-To-Date"
-msgstr "Fiscaal Jaar tot vandaag"
+msgstr "Fiscaal jaar tot nu toe"
 
 #: CRM/Contribute/Page/ContributionPage.php
 #: templates/CRM/Contribute/Page/DashBoard.tpl
@@ -2530,7 +2530,7 @@ msgstr "Uw eerste bijdrage zal worden verwerkt wanneer u hieronder op &quot;%2&q
 #: xml/templates/message_templates/contribution_dupalert_html.tpl
 #: xml/templates/message_templates/contribution_dupalert_text.tpl
 msgid "Organization Email"
-msgstr "Organisatie e-mail"
+msgstr "E-mailadres organisatie"
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
@@ -3233,7 +3233,7 @@ msgstr "Is de sectie Relatiegeschenken ingeschakeld voor deze online bijdragepag
 
 #: templates/CRM/Contribute/Form/ContributionPage/Premium.tpl
 msgid "Premiums Settings"
-msgstr "Relatiegeschenkinstellingen"
+msgstr "Instellingen relatiegeschenken"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Premium.tpl
 msgid "Title to appear at the top of the Premiums section."
@@ -3770,7 +3770,7 @@ msgstr "Voer de inhoud van het infobericht in. U mag gebruik maken van HTML-opma
 
 #: templates/CRM/Contribute/Form/ContributionPage/Widget.tpl
 msgid "Preview Widget and Get Code"
-msgstr "Widgetvoorbeeld en code kopiëren"
+msgstr "Voorbeeld widget tonen en code kopiëren"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Widget.tpl
 msgid ""
@@ -3960,7 +3960,7 @@ msgstr "Maand en dag (formaat MMDD) op welke een vaste periode van service begin
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid "Duration of subscription or service (e.g. 12-month subscription)."
-msgstr "Duur van de dienst (bijv. 12 maanden)."
+msgstr "Duur van het abonnement of de dienst (bijv. 12 maanden)."
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid ""
@@ -4117,7 +4117,7 @@ msgstr "U kunt ervoor kiezen om een bedankje te e-mailen naar contacten die e-ma
 
 #: templates/CRM/Contribute/Form/Task/PDFLetter.tpl
 msgid "Thank-you Letter for Contributions (PDF)"
-msgstr "Aanmaken bedankbrief voor bijdragen (PDF)"
+msgstr "PDF-bedankbrief voor bijdragen maken"
 
 #: templates/CRM/Contribute/Form/Task/Status.tpl
 msgid ""
@@ -4165,7 +4165,7 @@ msgstr "Dag in de periode dat de betaling gedaan moet worden."
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid "Contact Records for Contributors"
-msgstr "Contacten van contribuanten"
+msgstr "Contactrecords van gevers"
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid ""
@@ -4180,7 +4180,7 @@ msgstr "Om bijdragen te kunnen importeren dienen de contribuanten al als contact
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid "Matching Contributions to Contributors"
-msgstr "Koppelen Bijdragen aan Contribuanten"
+msgstr "Bijdragen koppelen aan gevers"
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid ""
@@ -4209,7 +4209,7 @@ msgid ""
 "Save the CSV file with your contributions and 'contact matching' data to "
 "your local hard drive (or an accessible drive on your network) - and you are"
 " now ready for step 1 (Upload Data)."
-msgstr "Het CSV bestand met uw bijdragen en contactgegevens dienen opgeslagen te worden op uw PC waarna u kunt starten met stap 1 (Upload gegevens)."
+msgstr "Het CSV-bestand met uw bijdragen en contactgegevens dienen opgeslagen te worden op uw lokale harde schijf, waarna u kunt starten met stap 1 (Upload gegevens)."
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid ""
@@ -4364,7 +4364,7 @@ msgstr "Rijen die identiek zijn aan reeds bestaande CiviCRM bijdrage records"
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid "Total number of rows imported successfully."
-msgstr "Aantal toegevoegd."
+msgstr "Aantal rijen dat succesvol geïmporteerd is."
 
 #: templates/CRM/Contribute/Page/ContributionPage.hlp
 #: templates/CRM/Contribute/Page/ContributionPage.tpl
@@ -4525,7 +4525,7 @@ msgstr "Huidig fiscaal jaar, tot nu toe"
 
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 msgid "Contribution Summary"
-msgstr "Overzicht van de bijdragen"
+msgstr "Bijdrage-overzicht"
 
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 msgid "Chart Layout"
@@ -4696,7 +4696,7 @@ msgstr "Bijdrage vastleggen (Cheque, Contant ...)"
 
 #: templates/CRM/Contribute/Page/Tab.tpl
 msgid "Submit Credit Card Contribution"
-msgstr "Creditcard bijdrage vastleggen"
+msgstr "Creditcard-bijdrage vastleggen"
 
 #: templates/CRM/Contribute/Page/Tab.tpl
 msgid "No contributions have been recorded from this contact."
@@ -4752,7 +4752,7 @@ msgstr "In de aangeleverde gegevens bevinden zich een of meer al bestaande gegev
 #: xml/templates/message_templates/contribution_dupalert_html.tpl
 #: xml/templates/message_templates/contribution_dupalert_text.tpl
 msgid "Organization Contact ID"
-msgstr "Organisatie Contact ID"
+msgstr "Contact-ID organisatie"
 
 #: xml/templates/message_templates/contribution_dupalert_html.tpl
 #: xml/templates/message_templates/contribution_dupalert_text.tpl
@@ -4774,15 +4774,15 @@ msgstr "CiviContribute waarschuwing: mogelijk dubbel contact"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_subject.tpl
 msgid "Event Registration Invoice: %1"
-msgstr "Registratie factuur: %1 "
+msgstr "Factuur voor inschrijving evenement: %1 "
 
 #: xml/templates/message_templates/contribution_invoice_receipt_subject.tpl
 msgid "Contribution Invoice: %1"
-msgstr "Bijdrage factuur: %1 "
+msgstr "Factuur voor bijdrage: %1 "
 
 #: xml/templates/message_templates/contribution_invoice_receipt_text.tpl
 msgid "Contribution Invoice"
-msgstr "Bijdrage factuur"
+msgstr "Factuur voor bijdrage"
 
 #: xml/templates/message_templates/contribution_offline_receipt_html.tpl
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
@@ -4931,7 +4931,7 @@ msgstr "Het automatisch verlengen van uw lidmaatschap is beëindigd en uw lidmaa
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
 msgid "Your recurring contribution term has ended."
-msgstr "Uw periodieke bijdrage termijn is beëindigt."
+msgstr "Uw periodieke bijdragen zijn beëindigd."
 
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
@@ -4972,7 +4972,7 @@ msgstr "Dit is een e-mail ten behoeve van een test. Er zijn geen financiële tra
 
 #: CRM/Contribute/ActionMapping/ByType.php
 msgid "Contribution Type"
-msgstr ""
+msgstr "Bijdragetype"
 
 #: CRM/Contribute/ActionMapping/ByType.php
 msgid "Soft Credit Role"
@@ -4984,19 +4984,19 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Contribution.php
 msgid "Recurring contribution"
-msgstr ""
+msgstr "Periodieke bijdrage"
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 msgid " All recurring contributions"
-msgstr ""
+msgstr "Alle periodieke bijdragen"
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 msgid " Recurring contributions with at least one payment"
-msgstr ""
+msgstr "Periodieke bijdragen met tenminste één betaling"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Recurring contributions with at least one payment"
-msgstr ""
+msgstr "Periodieke bijdragen met tenminste één betaling"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "All recurring contributions regardless of payments"
@@ -5020,47 +5020,47 @@ msgstr ""
 
 #: CRM/Contribute/DAO/PremiumsProduct.php
 msgid "Premium Product ID"
-msgstr ""
+msgstr "Product-ID relatiegeschenk"
 
 #: CRM/Contribute/DAO/PremiumsProduct.php
 msgid "Product"
-msgstr ""
+msgstr "Product"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Widget ID"
-msgstr ""
+msgstr "Widget-ID"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Widget Title"
-msgstr ""
+msgstr "Widgettitel"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Widget Image Url"
-msgstr ""
+msgstr "Afbeeldings-URL widget"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Homepage Url"
-msgstr ""
+msgstr "Homepage-URL widget"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Title Color"
-msgstr ""
+msgstr "Kleur titel"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Button Colour"
-msgstr ""
+msgstr "Kleur knop"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Bar Color"
-msgstr ""
+msgstr "Kleur balk"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Main Text Color"
-msgstr ""
+msgstr "Hoofd-tekstkleur"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Main Colour"
-msgstr ""
+msgstr "Hoofdkleur"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Backgroup Color"
@@ -5072,11 +5072,11 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "About Link Colour"
-msgstr ""
+msgstr "Kleur info-link"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Homepage Link Colour"
-msgstr ""
+msgstr "Kleur startpagina-link"
 
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Payment Processor Error message :"
@@ -5084,7 +5084,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Online Contribution:"
-msgstr ""
+msgstr "Online bijdrage:"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid ""
@@ -5107,20 +5107,20 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Invalid Membership"
-msgstr ""
+msgstr "Ongeldig lidmaatschap"
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Please select one of the memberships."
-msgstr ""
+msgstr "Selecteer een van de lidmaatschappen."
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Please renew my membership automatically."
-msgstr ""
+msgstr "Vernieuw mijn lidmaatschap automatisch."
 
 #: CRM/Contribute/Form/Task/Batch.php CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Contribute/Task.php
 msgid "Update multiple contributions"
-msgstr ""
+msgstr "Bijwerken van meerdere bijdragen"
 
 #: CRM/Contribute/Form/Task/Batch.php
 msgid ""
@@ -5131,14 +5131,14 @@ msgstr ""
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "1 contribution could not be deleted."
 msgid_plural "%count contributions could not be deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 bijdrage kon niet worden verwijderd."
+msgstr[1] "%count bijdragen konden niet worden verwijderd."
 
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "1 contribution will not be deleted."
 msgid_plural "%count contributions will not be deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 bijdrage zal niet worden verwijderd."
+msgstr[1] "%count bijdragen zullen niet worden verwijderd."
 
 #: CRM/Contribute/Form/Task/PDF.php
 msgid "Override privacy setting? (Do not email / Do not mail)"
@@ -5181,11 +5181,11 @@ msgstr ""
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid "Recurring Contribution Updated - decreased installment amount"
-msgstr ""
+msgstr "Periodieke bijdrage bijgewerkt - termijnbedrag verlaagd"
 
 #: CRM/Contribute/Task.php
 msgid "Export contributions"
-msgstr ""
+msgstr "Bijdragen exporteren"
 
 #: CRM/Contribute/Task.php
 msgid "Update pending contribution status"
@@ -5193,15 +5193,15 @@ msgstr ""
 
 #: CRM/Contribute/Task.php
 msgid "Receipts - print or email"
-msgstr ""
+msgstr "Ontvangstbevestiging - afdrukken of e-mailen"
 
 #: CRM/Contribute/Task.php
 msgid "Thank-you letters - print or email"
-msgstr ""
+msgstr "Bedankbrieven - afdrukken of e-maile"
 
 #: CRM/Contribute/Task.php
 msgid "Invoices - print or email"
-msgstr ""
+msgstr "Facturen - afdrukken of e-mailen"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "No payments found for this %1 record"
@@ -5223,15 +5223,15 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid "New Payment Method"
-msgstr ""
+msgstr "Nieuwe betaalmethode"
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid "Edit Payment Method"
-msgstr ""
+msgstr "Betaalmethode bewerken"
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid "Delete Payment Method"
-msgstr ""
+msgstr "Betaalmethode verwijderen"
 
 #: templates/CRM/Contribute/Form/Selector.tpl
 msgid "Click arrow to view payment details."
@@ -5243,11 +5243,11 @@ msgstr ""
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "# Completed"
-msgstr ""
+msgstr "# Voltooid"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "Avg"
-msgstr ""
+msgstr "Gem."
 
 #: templates/CRM/Contribute/Page/Tab.hlp
 msgid ""
@@ -5257,43 +5257,43 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "INVOICE"
-msgstr ""
+msgstr "FACTUUR"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Invoice Date:"
-msgstr ""
+msgstr "Factuurdatum:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Invoice Number:"
-msgstr ""
+msgstr "Factuurnummer:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Reference:"
-msgstr ""
+msgstr "Referentie:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Amount %1"
-msgstr ""
+msgstr "Bedrag %1"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "No %1"
-msgstr ""
+msgstr "Geen %1"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Sub Total"
-msgstr ""
+msgstr "Subtotaal"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "TOTAL %1 %2%"
-msgstr ""
+msgstr "TOTAAL %1 %2%"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "TOTAL NO %1"
-msgstr ""
+msgstr "TOTAAL AANTAL %1"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "TOTAL %1"
-msgstr ""
+msgstr "TOTAAL %1"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "LESS Amount Credited"
@@ -5375,4 +5375,4 @@ msgstr "Creditfactuur #:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Credit Amount:"
-msgstr ""
+msgstr "Creditbedrag:"
