--- a/po/nl_NL/grant.po
+++ b/po/nl_NL/grant.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 03:03+0000\n"
+"PO-Revision-Date: 2016-05-19 10:06+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -91,7 +91,7 @@ msgstr "Toegezegd bedrag"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Currency"
-msgstr "Toelage valuta"
+msgstr "Valuta toelage"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Rationale"
