po: update po/nl_NL/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/mailing.po
+++ b/po/nl_NL/mailing.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 03:31+0000\n"
+"PO-Revision-Date: 2016-05-19 12:02+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -34,7 +34,7 @@ msgstr "CiviMail kan geen leeg bericht versturen, overgeslagen: %1"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"%1\" is required."
-msgstr "Veld \"%1\" is verplicht."
+msgstr "Het veld \"%1\" is verplicht."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"body_html\" or \"body_text\" is required."
@@ -108,7 +108,7 @@ msgstr "Mailing bezorging"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Bounce type(s)"
-msgstr "Bounce-type(s)"
+msgstr "Bouncetype(s)"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing: Trackable Opens"
@@ -175,7 +175,7 @@ msgstr "Drempelwaarde"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component ID"
-msgstr "Mailing Component ID"
+msgstr "Mailingonderdeel-ID"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Component Name"
@@ -224,7 +224,7 @@ msgstr "Mailing opt-out"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Type"
-msgstr "Mailing Type"
+msgstr "Mailingtype"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Name"
@@ -273,7 +273,7 @@ msgstr "VERP overschrijven"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Creator"
-msgstr "Maker mailing"
+msgstr "Mailing gemaakt door"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Created Date"
@@ -330,19 +330,19 @@ msgstr "E-mail Selectiemethode"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "MailingAB ID"
-msgstr "MailingAB ID"
+msgstr "MailingA/B-ID"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Mailing ID (A)"
-msgstr "Mailing ID (A)"
+msgstr "Mailing-ID (A)"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Mailing ID (B)"
-msgstr "Mailing ID (B)"
+msgstr "Mailing-ID (B)"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Mailing ID (C)"
-msgstr "Mailing ID (C)"
+msgstr "Mailing-ID (C)"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Testing Criteria"
@@ -462,7 +462,7 @@ msgstr "Verwijderd op"
 
 #: CRM/Mailing/Event/BAO/Bounce.php
 msgid "Unknown bounce type: Could not parse bounce email"
-msgstr "Onbekend bounce-type: gebouncede mail kon niet worden verwerkt."
+msgstr "Onbekend bouncetype: gebouncede mail kon niet worden verwerkt."
 
 #: CRM/Mailing/Event/BAO/Bounce.php
 msgid "Unknown"
@@ -898,7 +898,7 @@ msgstr "toegang tot CiviMail"
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail subscribe/unsubscribe pages"
-msgstr "toegang tot CiviMail aanmelden/afmelden"
+msgstr "toegang tot aan- en afmeldpagina's van CiviMail"
 
 #: CRM/Mailing/Info.php
 msgid "Subscribe/unsubscribe from mailing list group"
@@ -906,7 +906,7 @@ msgstr "Inschrijven/uitschrijven voor mailinglijst groep"
 
 #: CRM/Mailing/Info.php
 msgid "delete in CiviMail"
-msgstr "uit CiviMail verwijderen"
+msgstr "verwijderen in CiviMail"
 
 #: CRM/Mailing/Info.php CRM/Mailing/Page/Browse.php
 #: CRM/Mailing/Selector/Browse.php
@@ -979,7 +979,7 @@ msgstr "Terug naar CiviMail"
 
 #: CRM/Mailing/Page/Report.php
 msgid "CiviMail Report: %1"
-msgstr "CiviMail rapport: %1"
+msgstr "CiviMail-rapport: %1"
 
 #: CRM/Mailing/Page/Tab.php
 msgid "Mailings sent to %1"
@@ -1036,7 +1036,7 @@ msgstr "Succesvol "
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Bounced "
-msgstr "Gebounced "
+msgstr "Gebounced"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Opened "
@@ -1084,7 +1084,7 @@ msgstr "Weet u zeker dat u deze mailing wilt opslaan?"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Approve/Reject"
-msgstr "Goedkeuren/Afkeuren"
+msgstr "Goedkeuren/afkeuren"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Re-Use"
@@ -1181,11 +1181,11 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as HTML"
-msgstr "Voorbeeld als HTML"
+msgstr "Voorbeeld HTML-versie"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as Plain Text"
-msgstr "Voorbeeld als platte tekst"
+msgstr "Voorbeeld platte tekst-versie"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
@@ -1250,11 +1250,11 @@ msgstr "Bericht automatisch antwoord"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Include:"
-msgstr ""
+msgstr "Inclusief:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Exclude:"
-msgstr ""
+msgstr "Exclusief:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1268,7 +1268,7 @@ msgstr "Platte tekst"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click Throughs"
-msgstr ""
+msgstr "Doorklikken"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Opens"
@@ -1281,7 +1281,7 @@ msgstr "Reageert"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Auto-Respond"
-msgstr ""
+msgstr "Automatisch antwoorden"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 #: templates/CRM/Mailing/Page/Resubscribe.tpl
@@ -1295,7 +1295,7 @@ msgstr "Heraanmelden"
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Publication"
-msgstr ""
+msgstr "Publicatie"
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send immediately"
@@ -1319,7 +1319,7 @@ msgstr ""
 
 #: ang/crmMailing/BodyHtml.html ang/crmMailing/BodyText.html
 msgid "Required tokens are missing."
-msgstr ""
+msgstr "Er ontbreken verplichte tokens."
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1327,11 +1327,11 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/wizard.html
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "This mailing has been submitted."
-msgstr ""
+msgstr "De mailing is opgeslagen en wordt verzonden."
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Define Mailing"
-msgstr ""
+msgstr "Mailing definieren"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1349,17 +1349,17 @@ msgstr "Kop- en voettekst"
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Responses"
-msgstr ""
+msgstr "Respons"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Review and Schedule"
-msgstr ""
+msgstr "Beoordelen en inplannen"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/wizard.html
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "Review"
-msgstr ""
+msgstr "Beoordelen"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1395,23 +1395,23 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl.js ang/crmMailingAB/EditCtrl.js
 #: ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Submitting..."
-msgstr ""
+msgstr "Bezig met verzenden..."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "(Estimating)"
-msgstr ""
+msgstr "(Schatting)"
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/PreviewRecipCtrl.html
 msgid "No recipients"
-msgstr ""
+msgstr "Geen ontvangers"
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "~1 recipient"
-msgstr ""
+msgstr "~1 ontvanger"
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "~%1 recipients"
-msgstr ""
+msgstr "~%1 ontvangers"
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/services.js
 msgid "Previewing..."
@@ -1423,11 +1423,11 @@ msgstr "Voorbeeld (%1)"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Dedupe by email"
-msgstr ""
+msgstr "Dubbelen vinden op basis van e-mailadres"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Selection Method"
-msgstr ""
+msgstr "Selectiemethode"
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid "Conflict"
@@ -1467,7 +1467,7 @@ msgstr ""
 
 #: ang/crmMailing/EmailBodyCtrl.js
 msgid "Required tokens"
-msgstr ""
+msgstr "Verplichte tokens"
 
 #: ang/crmMailing/MsgTemplateCtrl.js
 msgid "Save Template"
@@ -1475,7 +1475,7 @@ msgstr "Sjabloon opslaan"
 
 #: ang/crmMailing/PreviewComponentCtrl.js
 msgid "Invalid component ID (%1)"
-msgstr ""
+msgstr "Ongeldige component-ID (%1)"
 
 #: ang/crmMailing/PreviewRecipCtrl.html
 msgid ""
@@ -1604,7 +1604,7 @@ msgstr "Test-type"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Distribution"
-msgstr ""
+msgstr "Spreiding"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send"
@@ -1620,11 +1620,11 @@ msgstr "A/B-test versturen op:"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Assess"
-msgstr ""
+msgstr "Beoordelen"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Assess A/B results on an on-going basis"
-msgstr ""
+msgstr "A/B-testresultaten doorlopend beoordelen"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Assess A/B test at:"
@@ -1632,11 +1632,11 @@ msgstr "A/B-test beoordelen op:"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Setup"
-msgstr ""
+msgstr "Instellen"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Target"
-msgstr ""
+msgstr "Doel"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Compose"
@@ -1644,11 +1644,11 @@ msgstr "Opstellen"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Preview (A)"
-msgstr ""
+msgstr "Voorbeeld (A)"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Preview (B)"
-msgstr ""
+msgstr "Voorbeeld (B)"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Compose (A)"
@@ -1699,7 +1699,7 @@ msgstr "Niet voltooid"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Search for contacts using '%1'"
-msgstr ""
+msgstr "Zoek naar contacten met '%1'"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Browse events of type '%1'"
@@ -1711,7 +1711,7 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Reports for  '%1'"
-msgstr ""
+msgstr "Rapporten voor '%1'"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Opens (WIP)"
@@ -1723,27 +1723,27 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Test A (%1)"
-msgstr ""
+msgstr "Test A (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Test B (%1)"
-msgstr ""
+msgstr "Test B (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Final (%1)"
-msgstr ""
+msgstr "Definitief (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Select Final Mailing (Test %1)"
-msgstr ""
+msgstr "Kies definitieve mailing (test %1)"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "- Status -"
-msgstr ""
+msgstr "- Status -"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "- Test Type -"
-msgstr ""
+msgstr "- Test-type -"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "You have no A/B mailings"
@@ -1755,29 +1755,29 @@ msgstr "Nieuwe A/B-test"
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing A"
-msgstr ""
+msgstr "Mailing A"
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing B"
-msgstr ""
+msgstr "Mailing B"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Test Mailing A"
-msgstr ""
+msgstr "Testmailing A"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Test Mailing B"
-msgstr ""
+msgstr "Testmailing B"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Final Mailing"
-msgstr ""
+msgstr "Definitieve mailing"
 
 #: ang/crmMailingAB/WinnerDialogCtrl.html
 msgid ""
 "After selecting %1 as the winner, one must schedule the delivery for the "
 "final mailing."
-msgstr ""
+msgstr "Na het kiezen van %1 als de beste optie, moet de verzending van de definitieve mailing ingepland worden."
 
 #: ang/crmMailingAB/WinnerDialogCtrl.html
 msgid "Send final mailing immediately"
@@ -1785,11 +1785,11 @@ msgstr "Definitieve mailing meteen versturen"
 
 #: ang/crmMailingAB/WinnerDialogCtrl.html
 msgid "Send final mailing at:"
-msgstr ""
+msgstr "Definitieve mailing versturen op:"
 
 #: ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Submit final mailing"
-msgstr ""
+msgstr "Definitieve mailing verzenden"
 
 #: templates/CRM/Mailing/Form/Approve.tpl
 #: templates/CRM/Mailing/Form/Schedule.tpl templates/CRM/Mailing/Form/Test.tpl
@@ -1809,7 +1809,7 @@ msgstr "Mailing HTML:"
 #: templates/CRM/Mailing/Form/Approve.tpl
 #: templates/CRM/Mailing/Form/Schedule.tpl
 msgid "Mailing Text:"
-msgstr "Mailing Tekst:"
+msgstr "Mailing-tekst:"
 
 #: templates/CRM/Mailing/Form/Component.tpl
 msgid "New Mailing Component"
@@ -2435,7 +2435,7 @@ msgstr "Er zijn momenteel geen %1."
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Delivery Summary"
-msgstr "Samenvatting afleveringen"
+msgstr "Overzicht mailbezorging"
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid ""
@@ -2519,23 +2519,23 @@ msgstr "Geopend/Geklikt"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Campaign %1 %2"
-msgstr ""
+msgstr "Campagne %1 %2"
 
 #: CRM/Mailing/DAO/BouncePattern.php
 msgid "Bounce Pattern ID"
-msgstr ""
+msgstr "Bouncepatroon-ID"
 
 #: CRM/Mailing/DAO/BounceType.php
 msgid "Bounce Type ID"
-msgstr ""
+msgstr "Bouncetype-ID"
 
 #: CRM/Mailing/DAO/BounceType.php
 msgid "Bounce Type Name"
-msgstr ""
+msgstr "Naam bouncetype"
 
 #: CRM/Mailing/DAO/BounceType.php
 msgid "Bounce Type Description"
-msgstr ""
+msgstr "Omschrijving bouncetype"
 
 #: CRM/Mailing/DAO/Spool.php
 msgid "Spool ID"
@@ -2551,7 +2551,7 @@ msgstr ""
 
 #: CRM/Mailing/Event/DAO/Bounce.php
 msgid "Bounce ID"
-msgstr ""
+msgstr "Bounce-ID"
 
 #: CRM/Mailing/Event/DAO/Bounce.php CRM/Mailing/Event/DAO/Delivered.php
 #: CRM/Mailing/Event/DAO/Opened.php CRM/Mailing/Event/DAO/Reply.php
@@ -2612,7 +2612,7 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Reports for '%1'"
-msgstr ""
+msgstr "Rapporten voor '%1'"
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
