--- a/po/nl_NL/pledge.po
+++ b/po/nl_NL/pledge.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 03:22+0000\n"
+"PO-Revision-Date: 2016-05-19 09:00+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -95,7 +95,7 @@ msgstr "Financiële Pagina - %1"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Contact ID %1 %2"
-msgstr "Contact ID %1 %2"
+msgstr "Contact-ID %1 %2"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -326,11 +326,11 @@ msgstr "toegang tot CiviPledge"
 
 #: CRM/Pledge/Info.php
 msgid "View pledges"
-msgstr "Tonen toezeggingen"
+msgstr "Toezeggingen tonen"
 
 #: CRM/Pledge/Info.php
 msgid "edit pledges"
-msgstr "wijzigen toezeggingen"
+msgstr "toezeggingen wijzigen"
 
 #: CRM/Pledge/Info.php
 msgid "Create and update pledges"
@@ -390,7 +390,7 @@ msgstr "Volgend bedrag"
 
 #: CRM/Pledge/Selector/Search.php
 msgid "Pledge Search"
-msgstr "Toezegging zoeken"
+msgstr "Toezeggingen zoeken"
 
 #: CRM/Pledge/Task.php
 msgid "Export Pledges"
@@ -562,7 +562,7 @@ msgstr "Aantal geselecteerde toezeggingen: %1"
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "Pledge Summary"
-msgstr "Toezeggingen - Overzicht"
+msgstr "Overzicht toezeggingen"
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "(current month)"
