po: update po/nl_NL/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/install.po
+++ b/po/nl_NL/install.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 02:31+0000\n"
+"PO-Revision-Date: 2016-05-19 08:42+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -381,11 +381,11 @@ msgstr "MySQL \"thread_stack\" is %1 kb"
 
 #: install/index.php
 msgid "The database: '%1' does not exist."
-msgstr "De database: '%1' bestaat niet."
+msgstr "De database '%1' bestaat niet."
 
 #: install/index.php
 msgid "Able to create a new database."
-msgstr "Maken van een database is mogelijk."
+msgstr "Maken van een nieuwe database is mogelijk."
 
 #: install/index.php
 msgid "user '%1' doesn't have CREATE DATABASE permissions."
