--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 03:37+0000\n"
+"PO-Revision-Date: 2016-05-19 12:02+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -38,7 +38,7 @@ msgstr "Rapport Exemplaar Titel"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report template ID"
-msgstr "Rapport Sjabloon ID"
+msgstr "Rapportsjabloon-ID"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report instance Name"
@@ -106,7 +106,7 @@ msgstr "Toegevoegd door"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Contact Name"
-msgstr "Toegewezene"
+msgstr "Toegewezen aan"
 
 #: CRM/Report/Form/Activity.php
 msgid "Target Contact Name"
@@ -158,7 +158,7 @@ msgstr "Schakel a.u.b. 'Toevoegen Dossieractiviteiten' in om te filteren op acti
 #: CRM/Report/Form/Activity.php CRM/Report/Form/ActivitySummary.php
 #: CRM/Report/Form/Case/Detail.php CRM/Report/Form/Contact/Detail.php
 msgid "View Contact Summary for this Contact"
-msgstr "Algemene gegevens van dit contact weergeven"
+msgstr "Contactoverzicht voor dit contact weergeven"
 
 #: CRM/Report/Form/Activity.php
 msgid "View Activity Record"
@@ -313,7 +313,7 @@ msgstr "Alleen totalen"
 
 #: CRM/Report/Form/Case/TimeSpent.php
 msgid "Month/Year"
-msgstr "Maand/Jaar"
+msgstr "Maand/jaar"
 
 #: CRM/Report/Form/Case/TimeSpent.php
 msgid "# Activities"
@@ -380,12 +380,12 @@ msgstr "Logtype Tabel"
 #: CRM/Report/Form/Contact/LoggingSummary.php
 #: CRM/Report/Form/Contribute/LoggingSummary.php
 msgid "Altered By"
-msgstr "Gewijzigd Door"
+msgstr "Gewijzigd door"
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 #: CRM/Report/Form/Contribute/LoggingSummary.php
 msgid "Go to contact summary"
-msgstr "Ga naar samenvatting contact"
+msgstr "Ga naar contactoverzicht"
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Delete (to trash)"
@@ -393,7 +393,7 @@ msgstr "Verwijderen (naar prullenbak)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact A Full Name"
-msgstr ""
+msgstr "Volledige naam contact A"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Type (Contact A)"
@@ -457,7 +457,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Not expired"
-msgstr ""
+msgstr "Niet verlopen"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Edit this relationship."
@@ -683,11 +683,11 @@ msgstr "Vastgelegd bedrag"
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Amount Received"
-msgstr "Bedrag ontvangen"
+msgstr "Ontvangen bedrag"
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Number of Donors"
-msgstr "Aantal Donateurs"
+msgstr "Aantal donateurs"
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Most Recent Contribution"
@@ -736,7 +736,7 @@ msgstr "Berekende einddatum (of einddatum of alle termijnen verwerkt)"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Addressee Name"
-msgstr "Geadresseerde Naam"
+msgstr "Naam geadresseerde"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Percentage Change"
@@ -744,15 +744,15 @@ msgstr "Percentage veranderd"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Range One Stat"
-msgstr "Bereik één stat."
+msgstr "Stat. periode één"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Range Two Stat"
-msgstr "Bereik twee stat."
+msgstr "Stat. periode twee"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Initial Date Range"
-msgstr "Initiële periode "
+msgstr "Eerste periode"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Second Date Range"
@@ -760,11 +760,11 @@ msgstr "Tweede periode"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Range One Amount"
-msgstr "Bereik één bedrag"
+msgstr "Bedrag periode één"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Range Two Amount"
-msgstr "Bereik twee bedragen"
+msgstr "Bedrag periode twee"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Please select at least one Group by field."
@@ -847,7 +847,7 @@ msgstr "Toon alle directe bijdragen van dit contact."
 
 #: CRM/Report/Form/Contribute/SoftCredit.php
 msgid "view contact summary"
-msgstr "Toon samenvatting contact"
+msgstr "Contactoverzicht weergeven"
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Contribution Amount Stats"
@@ -1053,7 +1053,7 @@ msgstr "%1 voor deze streek."
 
 #: CRM/Report/Form/Extended.php CRM/Report/Form.php
 msgid "%1 for this state."
-msgstr "%1 voor deze staat"
+msgstr "%1 voor deze staat."
 
 #: CRM/Report/Form/Grant/Detail.php
 msgid "Money Transfer Date"
@@ -1061,7 +1061,7 @@ msgstr "Geld overgemaakt"
 
 #: CRM/Report/Form/Grant/Detail.php
 msgid "Grant Decision Date"
-msgstr "Beslisdatum Toelage"
+msgstr "Beslisdatum over toelage"
 
 #: CRM/Report/Form/Grant/Detail.php
 msgid "Grant Report Received"
@@ -1078,31 +1078,31 @@ msgstr "Toon bijbehorende contact details."
 #: CRM/Report/Form/Grant/Statistics.php
 #: templates/CRM/Report/Form/Grant/Statistics.tpl
 msgid "Summary Statistics"
-msgstr "Samenvatting Statistieken"
+msgstr "Statistiekenoverzicht"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By Grant Type"
-msgstr "Op Type Toelage"
+msgstr "Op toelagetype"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By Gender"
-msgstr "Op Geslacht"
+msgstr "Op geslacht"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By Contact Type"
-msgstr "Op Type Contact"
+msgstr "Op contacttype"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By World Region"
-msgstr "Op Wereldregio"
+msgstr "Op wereldregio"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By Country"
-msgstr "Op Land"
+msgstr "Op land"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By Region"
-msgstr "Op Regio"
+msgstr "Op regio"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "By %1"
@@ -1110,15 +1110,15 @@ msgstr "Door %1"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "Grant Requests Received"
-msgstr "Ontvangen Verzoeken Toelage"
+msgstr "Ontvangen toelage-aanvragen"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "Grants Awarded"
-msgstr "Toegekende Toelagen"
+msgstr "Toegekende toelagen"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "Grant Reports Received"
-msgstr "Verstrekte Toelagen"
+msgstr "Ontvangen toelagerapporten"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "Number of Grants"
@@ -1154,7 +1154,7 @@ msgstr "Beschikbaar voor dashboard?"
 
 #: CRM/Report/Form/Instance.php
 msgid "Reserved Report?"
-msgstr "Gereserveerd rapport?"
+msgstr "Rapport gereserveerd?"
 
 #: CRM/Report/Form/Instance.php
 msgid "Everyone (includes anonymous)"
@@ -1162,7 +1162,7 @@ msgstr "Iedereen (ook anonieme gebruikers)"
 
 #: CRM/Report/Form/Instance.php
 msgid "ACL Group/Role"
-msgstr "ACL Groep/Rol"
+msgstr "ACL-groep/-rol"
 
 #: CRM/Report/Form/Instance.php
 msgid "Parent Menu"
@@ -1174,7 +1174,7 @@ msgstr "Rapport opslaan"
 
 #: CRM/Report/Form/Instance.php
 msgid "\"%1\" report has been updated."
-msgstr "\"%1\" rapport is gewijzigd."
+msgstr "Rapport \"%1\" is gewijzigd."
 
 #: CRM/Report/Form/Instance.php
 msgid ""
@@ -1186,7 +1186,7 @@ msgstr "Uw rapport is gekopieerd. U ziet de nieuwe versie met de naam \"%1\"."
 msgid ""
 "\"%1\" report has been successfully created. You are currently viewing the "
 "new report instance."
-msgstr "\"%1\" rapport is aangemaakt. U ziet het nieuwe rapport."
+msgstr "Rapport \"%1\" is aangemaakt. U ziet het nieuwe rapport."
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Count"
@@ -1274,7 +1274,7 @@ msgstr "Voor overzicht in kaartvorm, kies minstens een veld uit %1 OF %2."
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Mail Summary"
-msgstr "Mail Samenvatting"
+msgstr "Overzicht mailings"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Statistics"
@@ -1307,7 +1307,7 @@ msgstr "Datum beloning afgerond"
 #: CRM/Report/Form/Member/ContributionDetail.php
 #: CRM/Report/Form/Member/Detail.php
 msgid "Join Date"
-msgstr "Aanmeldingsdatum"
+msgstr "Aanmelddatum"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Membership Source"
@@ -1332,7 +1332,7 @@ msgstr "Verloopdatum lidmaatschap"
 
 #: CRM/Report/Form/Member/Lapse.php
 msgid "View Membership Detail for this Contact."
-msgstr "Lidmaatschapsdetails van dit contact weergeven."
+msgstr "Lidmaatschapsdetails voor dit contact weergeven."
 
 #: CRM/Report/Form/Member/Summary.php
 msgid "Total Payments Made"
@@ -1408,7 +1408,7 @@ msgstr "Soort bestaat al in de database."
 
 #: CRM/Report/Form/Register.php
 msgid "Selected %1 Report has been deleted."
-msgstr "Geselecteerd %1-rapport is verwijderd."
+msgstr "Het geselecteerde %1-rapport is verwijderd."
 
 #: CRM/Report/Form.php
 msgid "Report Templates"
@@ -1492,7 +1492,7 @@ msgstr "Diagram"
 
 #: CRM/Report/Form.php
 msgid "Group by columns"
-msgstr "Groepeerkolommen"
+msgstr "Groepeer op kolommen"
 
 #: CRM/Report/Form.php
 msgid "Sorting"
@@ -1616,7 +1616,7 @@ msgstr "Is"
 
 #: CRM/Report/Form.php
 msgid "Report URL"
-msgstr "Rapport URL"
+msgstr "Rapport-URL"
 
 #: CRM/Report/Form.php
 msgid "The report is attached as a CSV file."
@@ -1664,7 +1664,7 @@ msgstr "Contact achtervoegsel"
 
 #: CRM/Report/Form.php
 msgid "Address Greeting"
-msgstr "Adres aanhef"
+msgstr "Adresaanhef"
 
 #: CRM/Report/Form.php
 msgid "Contact Job title"
@@ -1688,7 +1688,7 @@ msgstr "Rapporten weergeven"
 
 #: CRM/Report/Info.php
 msgid "access Report Criteria"
-msgstr "toegang tot criteria rapport"
+msgstr "toegang tot rapportcriteria"
 
 #: CRM/Report/Info.php
 msgid "Change report search criteria"
@@ -1696,7 +1696,7 @@ msgstr "Zoekcriteria rapport wijzigen"
 
 #: CRM/Report/Info.php
 msgid "administer reserved reports"
-msgstr "beheren gereserveerde rapporten"
+msgstr "gereserveerde rapporten beheren"
 
 #: CRM/Report/Info.php
 msgid "Edit all reports that have been marked as reserved"
@@ -1704,7 +1704,7 @@ msgstr "Alle gereserveerde rapporten wijzigen"
 
 #: CRM/Report/Info.php
 msgid "administer Reports"
-msgstr "beheren rapporten"
+msgstr "rapporten beheren"
 
 #: CRM/Report/Info.php
 msgid "Manage report templates"
@@ -1732,11 +1732,11 @@ msgstr "Rapport(en) gemaakt van sjabloon: %1"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "%1 Reports"
-msgstr "%1 Rapporten"
+msgstr "%1-rapporten"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "New %1 Report"
-msgstr "Nieuw %1 Rapport"
+msgstr "Nieuw %1-rapport"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "New Report"
@@ -1758,7 +1758,7 @@ msgstr "Kon het rapportsjabloon niet vinden. Verzeker u ervan dat het rapportsja
 
 #: templates/CRM/Report/Form/Actions.tpl
 msgid "Existing report(s) from this template"
-msgstr "Bestaande rapport(en) van dit sjabloon"
+msgstr "Bestaande rapport(en) op basis van dit sjabloon"
 
 #: templates/CRM/Report/Form/Actions.tpl
 msgid "Add all contacts to %1 group?"
@@ -1770,7 +1770,7 @@ msgstr "Cover voor %1"
 
 #: templates/CRM/Report/Form/Campaign/SurveyCoverSheet.tpl
 msgid "Survey Title = %1"
-msgstr "Enquête Titel = %1"
+msgstr "Enquêtetitel = %1"
 
 #: templates/CRM/Report/Form/Campaign/SurveyCoverSheet.tpl
 msgid "Response Codes"
@@ -1782,7 +1782,7 @@ msgstr "V%1 = %2"
 
 #: templates/CRM/Report/Form/Event/Income.tpl
 msgid "%1 Breakdown"
-msgstr "%1 uitsplitsing"
+msgstr "Uitsplitsing %1"
 
 #: templates/CRM/Report/Form/Event/Income.tpl
 msgid "% of Total"
@@ -1810,7 +1810,7 @@ msgstr "Alle toelagen"
 
 #: templates/CRM/Report/Form/Grant/Statistics.tpl
 msgid "Statistics Breakdown"
-msgstr "Statistisch omslagpunt"
+msgstr "Uitsplitsing statistieken"
 
 #: templates/CRM/Report/Form/Grant/Statistics.tpl
 msgid "Unassigned"
@@ -1845,7 +1845,7 @@ msgstr "Rapportbeschrijving weergegeven op het scherm."
 
 #: templates/CRM/Report/Form/Register.tpl
 msgid "Report Url must be like \"contribute/summary\""
-msgstr "Rapport-URL moet zijn zoals \"bijdrage/overzicht\""
+msgstr "Rapport-URL moet iets zijn als \"contribute/summary\""
 
 #: templates/CRM/Report/Form/Register.tpl
 msgid ""
@@ -2019,7 +2019,7 @@ msgstr "Weet u zeker dat u dit rapport wilt verwijderen?"
 
 #: templates/CRM/Report/Page/InstanceList.tpl
 msgid "No %1 reports have been created."
-msgstr "Er zijn %1 rapporten aangemaakt."
+msgstr "Er zijn geen %1-rapporten aangemaakt."
 
 #: templates/CRM/Report/Page/InstanceList.tpl
 msgid ""
@@ -2064,7 +2064,7 @@ msgstr ""
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Name"
-msgstr ""
+msgstr "Toegewezen aan"
 
 #: CRM/Report/Form/Activity.php
 msgid "Target Name"
@@ -2110,7 +2110,7 @@ msgstr ""
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Number of Activities"
-msgstr ""
+msgstr "Totaal aantal activiteiten"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Duration (in Minutes)"
@@ -2126,7 +2126,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Contact Merge"
-msgstr ""
+msgstr "Contacten samenvoegen"
 
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Net"
@@ -2182,15 +2182,15 @@ msgstr ""
 
 #: CRM/Report/Form/Instance.php templates/CRM/Report/Page/InstanceList.tpl
 msgid "View Results"
-msgstr ""
+msgstr "Resultaten tonen"
 
 #: CRM/Report/Form/Instance.php
 msgid "Show Criteria"
-msgstr ""
+msgstr "Criteria tonen"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Date"
-msgstr ""
+msgstr "Bounce-datum"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "On hold"
@@ -2198,15 +2198,15 @@ msgstr "Uitgeschakeld"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Hold date"
-msgstr ""
+msgstr "Uitgeschakeld op"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Hold reset date"
-msgstr ""
+msgstr "Opnieuw ingeschakeld op"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Opt-outs"
-msgstr ""
+msgstr "Opt-outs"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Total Open Rate"
@@ -2222,7 +2222,7 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Developer"
-msgstr ""
+msgstr "Voor ontwikkelaars"
 
 #: CRM/Report/Form.php
 msgid "Grand Total"
@@ -2230,23 +2230,23 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Refresh results"
-msgstr ""
+msgstr "Resultaten verversen"
 
 #: CRM/Report/Form.php
 msgid "View results"
-msgstr ""
+msgstr "Resultaten tonen"
 
 #: CRM/Report/Info.php
 msgid "view report sql"
-msgstr ""
+msgstr "SQL voor rapport tonen"
 
 #: CRM/Report/Info.php
 msgid "View sql used in CiviReports"
-msgstr ""
+msgstr "In CiviReports gebruikte SQL tonen"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "View as pdf"
-msgstr ""
+msgstr "Als PDF tonen"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Print report"
@@ -2263,8 +2263,8 @@ msgstr "Rapport verwijderen"
 #: CRM/Report/Page/InstanceList.php
 msgid ""
 "Are you sure you want delete this report? This action cannot be undone."
-msgstr ""
+msgstr "Weet u zeker dat u dit rapport wilt verwijderen? Dit kan niet ongedaan gemaakt worden."
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "Link to "
-msgstr ""
+msgstr "Linke naar"
