po: update po/nl_NL/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/member.po
+++ b/po/nl_NL/member.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 03:31+0000\n"
+"PO-Revision-Date: 2016-05-19 09:03+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -153,7 +153,7 @@ msgstr "Lidmaatschapstype(s)"
 
 #: CRM/Member/BAO/Query.php
 msgid "Primary Member?"
-msgstr "Primair Lid?"
+msgstr "Primair lid?"
 
 #: CRM/Member/BAO/Query.php
 msgid "Pay Later?"
@@ -233,7 +233,7 @@ msgstr "Lidmaatschap Blok Nieuwe Tekst"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Block Renewal Title"
-msgstr "Lidmaatschap Blok Verlenging Titel"
+msgstr "Titel blok verlenging lidmaatschap"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Block Renewal Text"
@@ -253,7 +253,7 @@ msgstr "Lidmaatschap Betaling ID"
 
 #: CRM/Member/DAO/MembershipStatus.php
 msgid "Membership Status ID"
-msgstr "Lidmaatschap Status ID"
+msgstr "Lidmaatschapsstatusnummer"
 
 #: CRM/Member/DAO/MembershipStatus.php CRM/Member/Form/MembershipStatus.php
 #: templates/CRM/Member/Page/MembershipStatus.tpl
@@ -291,7 +291,7 @@ msgstr "Alleen beheerder mag toewijzen?"
 
 #: CRM/Member/DAO/MembershipStatus.php
 msgid "Default Status?"
-msgstr "Standaardstatus"
+msgstr "Standaardstatus?"
 
 #: CRM/Member/DAO/MembershipStatus.php
 msgid "Is Reserved"
@@ -770,7 +770,7 @@ msgstr "Voer a.u.b. een bedrag in voor de minimumbijdrage."
 
 #: CRM/Member/Form/MembershipType.php
 msgid "Membership Organization"
-msgstr "Lidmaatschap Organisatie"
+msgstr "Lidmaatschapsorganisatie"
 
 #: CRM/Member/Form/MembershipType.php
 #: templates/CRM/Member/Page/MembershipType.tpl
@@ -1041,11 +1041,11 @@ msgstr "nvt"
 
 #: CRM/Member/Page/Tab.php CRM/Member/Selector/Search.php
 msgid "View Membership"
-msgstr "Toon lidmaatschap"
+msgstr "Lidmaatschap tonen"
 
 #: CRM/Member/Page/Tab.php
 msgid "Create Membership"
-msgstr "Lidmaatschap maken"
+msgstr "Nieuw lidmaatschap"
 
 #: CRM/Member/Page/Tab.php CRM/Member/Selector/Search.php
 msgid "Edit Membership"
@@ -1053,7 +1053,7 @@ msgstr "Lidmaatschap wijzigen"
 
 #: CRM/Member/Page/Tab.php CRM/Member/Selector/Search.php
 msgid "Renew-Credit Card"
-msgstr "Creditcard verlengen"
+msgstr "Verlengen met creditcard"
 
 #: CRM/Member/Page/Tab.php CRM/Member/Selector/Search.php
 msgid "Renew Membership Using Credit Card"
@@ -1504,7 +1504,7 @@ msgstr "Hernieuwing verlengd de einddatum van het lidmaatschap met één periode
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "change"
-msgstr "verander"
+msgstr "wijzigen"
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "membership periods"
@@ -1934,7 +1934,7 @@ msgstr "Rijen met niet-overeenkomende lidmaatschapsnummers. (NIET bijgewerkt)."
 
 #: templates/CRM/Member/Import/Form/Summary.tpl
 msgid "Download Mismatched Memberships"
-msgstr "Niet-overeenkomende lidmaatschappen downloaden"
+msgstr "Onjuist gekoppelde lidmaatschappen downloaden"
 
 #: templates/CRM/Member/Import/Form/Summary.tpl
 msgid "Rows which are duplicates of existing CiviCRM membership records."
@@ -1985,7 +1985,7 @@ msgstr "Leden per type"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "(Last Month)"
-msgstr "(Laatste Maand)"
+msgstr "(Laatste maand)"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid " (MTD)"
@@ -2256,7 +2256,7 @@ msgstr "Er zijn geen lidmaatschappen voor u vastgelegd."
 
 #: xml/templates/message_templates/membership_autorenew_billing_subject.tpl
 msgid "Membership Autorenewal Billing Updates"
-msgstr "Wijzigingen Betalingen Automatisch Verlenging "
+msgstr ""
 
 #: xml/templates/message_templates/membership_autorenew_cancelled_html.tpl
 #: xml/templates/message_templates/membership_autorenew_cancelled_text.tpl
@@ -2282,7 +2282,7 @@ msgstr "Lidmaatschap hernieuwing Bevestiging en Ontvangstbewijs"
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "%1 Membership"
-msgstr "%1 Lidmaatschap"
+msgstr "Lidmaatschap %1"
 
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 msgid "NO"
@@ -2387,11 +2387,11 @@ msgstr ""
 
 #: CRM/Member/Task.php
 msgid "Export members"
-msgstr ""
+msgstr "Leden exporteren"
 
 #: CRM/Member/Task.php
 msgid "PDF letters - print for memberships"
-msgstr ""
+msgstr "PDF-brieven voor lidmaatschappen afdrukken"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
